--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,18 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
-
+# Media files
+*.mp3
+*.mp4
+*.wav
+*.flac
+*.mkv
+*.avi
+*.mov
+*.wmv
+*.flv
+*.webm
+media/
 # Translations
 *.mo
 *.pot
